[package]
name = "gd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["cargo"]}
colored = "2"

[profile.release]
# Strip all symbols.
strip = true
# Bring in other optimizations to reduce binary size.
debug = false
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
