[package]
name = "lhc"
description = "client for lh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["cargo"]}
config = { version = "0.11", features = ["yaml"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Strip all symbols.
strip = true
