cabal-version:   2.4
name:            lhh
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Linus Arver
maintainer:      Linus Arver <linusarver@gmail.com>
copyright:       2021 Linus Arver
tested-with:     GHC ==9.2.1
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/lhh#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/lhh.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: GHC2021
  default-extensions:
    DisambiguateRecordFields
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoDoAndIfThenElse
    NoNondecreasingIndentation
    OverloadedRecordDot
    OverloadedRecordUpdate
    OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  lib
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable lhh
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  lhh
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite lhh-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , lhh
    , QuickCheck
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark lhh-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , lhh
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
