name: xmonad-linus
version: 0.0.0.0
license: BSD2
author: Linus Arver
maintainer: linusarver@gmail.com
category: Utility
build-type: Simple
cabal-version: >=1.10

executable xmonad
  main-is: xmonad.hs
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror -threaded -fno-warn-tabs
  default-extensions:
      DeriveDataTypeable
    , RecordWildCards
  build-depends:
      base >= 4.8 && < 5
    , array >= 0.5.1.0
    , containers >= 0.5.6.2
    , unix >= 2.7.1.0
    , random >= 1.1
    , xmonad >= 0.11.1
    , xmonad-contrib >= 0.11.4
