--- lens.old.cabal	2014-01-14 11:58:45.540330449 -0800
+++ lens.new.cabal	2014-01-14 11:59:06.958474869 -0800
@@ -176,7 +176,7 @@
     generic-deriving          >= 1.4      && < 1.7,
     ghc-prim,
     hashable                  >= 1.1.2.3  && < 1.3,
-    MonadCatchIO-transformers >= 0.3      && < 0.4,
+    monadcatchio-transformers >= 0.3      && < 0.4,
     mtl                       >= 2.0.1    && < 2.2,
     parallel                  >= 3.1.0.1  && < 3.3,
     profunctors               >= 4        && < 5,
